@@ -48,8 +48,8 @@
 	//
 	//-----------------------------------------------------------------------------
 
-	define("BBCODE_VERSION", "1.4.2");		// Current version number
-	define("BBCODE_RELEASE", "2009-06-21");	// Current release date
+	define("BBCODE_VERSION", "1.4.3");		// Current version number
+	define("BBCODE_RELEASE", "2009-10-10");	// Current release date
 
 	define("BBCODE_VERBATIM", 2);		// Content type:  Content is not processed as BBCode.
 	define("BBCODE_REQUIRED", 1);		// Content type:  Content may not be empty or whitespace.
